gloc-macro/tests/ui/fail/no_state_arg_no_annotation.rs
use gloc_macro::cubit;

// Error: no `state = T` arg and no `#[state]` fields.
#[cubit]
struct BadCubit {}

fn main() {}
